# c-algorithm

./: CMakeLists.txt
lib/: CMakeLists.txt  algorithm.cpp  algorithm.h
src/: CMakeLists.txt  b-forda.cpp  bfs.cpp  cycle.cpp  dfs.cpp  dijkstry.cpp  kruskala.cpp  prima.cpp
test/: CMakeLists.txt  b-forda.txt  bfs.txt  bfs_test.cpp  cycle.txt  dfs.txt  dfs_test.cpp  dijkstry.txt  unit_tests.cpp
